--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,13 @@
         "php": "^7.3|^8.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "hardevine/shoppingcart": "^3.0",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
+        "laravel/scout": "^9.3",
         "laravel/tinker": "^2.5",
+        "laravel/ui": "^3.4",
+        "nicolaslopezj/searchable": "1.*",
         "tcg/voyager": "^1.5"
     },
     "require-dev": {
